code/tui/src/app/fullscreen/snapshots/app__fullscreen__pointer__tests__fullscreen_selection_copied.snap
---
source: code/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  .                                    [— / —] [Dashboard]  
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                               Copied 7 chars to clipboard  
  ────────────────────────────────────────────────────────  
  > copy me                                                 
  ─────────────────────────────────────── Automatic model   
                                                            
  Enter send  ·  shift+tab mode  ·  alt+r effort
