code/tui/src/app/fullscreen/snapshots/app__fullscreen__pointer__tests__fullscreen_selection_copy_failed.snap
---
source: code/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  .                                    [— / —] [Dashboard]  
                                                            
● clipboard unavailable                                     
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
  ⏸ Manual                                                  
  ────────────────────────────────────────────────────────  
  > copy me                                                 
  ─────────────────────────────────────── Automatic model   
                                                            
  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
