code/tui/src/app/fullscreen/snapshots/app__fullscreen__pointer__tests__input_pointer_selection.snap
---
source: code/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  .                                    [— / —] [Dashboard]  
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
  ⏸ ask permissions on                                      
  ────────────────────────────────────────────────────────  
  > ab你 cd                                                  
  ─────────────────────────────────────── Automatic model   
                                                            
  Enter send  ·  shift+tab permissions
